[package]
name = "feed_distributor"
version = "0.1.0"
edition = "2021"
default-run = "feed_distributor"

[[bin]]
name="t"
path="src/test.rs"


[[bin]]
name="feed_distributor"
path="src/main.rs"

[dependencies]
bitflags = "2.6.0"
crossbeam = "0.8.4"
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
futures-util = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["server"] }
hyper-util = "0.1.10"
lazy_static = "1.5.0"
mio = { version = "1.0.2", features = ["net", "os-ext", "os-poll"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
threadpool = "1.8.1"
tokio = { version = "1.41.1", features = ["macros", "net", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"

[profile.release]
debug = true
